# YOLOX

demo/TensorRT/cpp/: CMakeLists.txt  logging.h  yolox.cpp
exps/example/custom/: yusuke0707yolox_tiny.py  yusuke_0707yolox_s.py
tools/: trt.py  yusuke_demo.py
